<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/RegToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="?attr/actionBarSize"
        android:background="@color/darker_color"
        theme="@style/ThemeOverlay.AppCompat.ActionBar">
    </android.support.v7.widget.Toolbar>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_below="@+id/RegToolbar">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ask_login"
        />

    <EditText
        android:id="@+id/edit_reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:text="@string/ask_tel"
        android:layout_below="@+id/edit_reg_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/edit_reg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/re_ask_tel"
        android:id="@+id/textView"
        android:layout_below="@+id/edit_reg_pass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/edit_reg_pass_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="textPassword"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ask_key"
        android:id="@+id/textView5"
        android:layout_below="@+id/edit_reg_pass_re"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/edit_reg_secret_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="RegOnClick"
        android:textColor="@color/White"
        android:layout_marginBottom="96dp"
        android:text="@string/registration_button"
        style="@style/reg_button_new"/>



    <TextView
        android:id="@+id/err_login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_err"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/edit_reg_login"
        android:layout_toRightOf="@+id/edit_reg_login"
        android:layout_toEndOf="@+id/edit_reg_login" />
    <TextView
        android:id="@+id/err_pass_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_alert"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/edit_reg_pass"
        android:layout_toRightOf="@+id/edit_reg_pass"
        android:layout_toEndOf="@+id/edit_reg_pass" />
    <TextView
        android:id="@+id/err_accept_pass_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_pass_alert"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/edit_reg_pass_re"
        android:layout_toRightOf="@+id/edit_reg_pass_re"
        android:layout_toEndOf="@+id/edit_reg_pass_re" />
    <TextView
        android:id="@+id/err_secret_key_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_key_alert"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/edit_reg_secret_key"
        android:layout_toRightOf="@+id/edit_reg_secret_key"
        android:layout_toEndOf="@+id/edit_reg_secret_key" />

    </RelativeLayout>

</RelativeLayout>